# home-curator

./: .env.example  .gitignore  CLAUDE.md  README.md  Taskfile.yml  pyrightconfig.json  repository.yaml
apps/backend/: .gitignore  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial.py  0002_entity_support.py
apps/backend/src/home_curator/: __init__.py  config.py  deletion_tracker.py  main.py
apps/backend/src/home_curator/api/: actions.py  areas.py  cache.py  config_api.py  deps.py  devices.py  entities.py  events.py  exceptions.py  policies.py  schemas.py
apps/backend/tests/fixtures/: sample_policies.yaml
apps/backend/tests/integration/: conftest.py  test_actions_api.py  test_actions_entity_api.py  test_areas_api.py  test_devices_api.py  test_devices_resync.py  test_entities_api.py  test_events_entity_sse.py  test_events_sse.py  test_exceptions_api.py  test_exceptions_entity.py  test_health.py  test_policies_api.py  test_policies_cascade.py  test_policies_compile.py  test_policies_entity_yaml_roundtrip.py  test_policies_hot_reload.py  test_policies_simulate.py  test_policies_simulate_entity.py  test_registry_event_refresh.py
apps/backend/tests/unit/: test_alembic_migration.py  test_config.py  test_deletion_tracker.py  test_entity_cache.py  test_entity_deletion_tracker.py  test_events_broker.py  test_exceptions_repo_entity.py  test_fake_ha_client.py  test_ha_models.py  test_policy_schema_entity.py  test_registry_cache.py  test_seed_policies_entity.py  test_smoke.py  test_websocket_client.py
(+164 files in other folders)
